deployment/namespace-definition.yml
apiVersion: v1
kind: Namespace
metadata:
  name: universe-simulator
  labels:
    app: universe-simulator
