deployment/deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: universe-simulator-gateway-app-deployment
  namespace: universe-simulator
  labels:
    app: universe-simulator
    service: universe-simulator-gateway-app
spec:
  template:
    metadata:
      labels:
        app: universe-simulator
        service: universe-simulator-gateway-app
    spec:
      containers:
        - name: universe-simulator-gateway-app
          image: universesimulator/gateway:57
          volumeMounts:
            - name: cert-volume
              mountPath: /home/cnb/universe-simulator/universe-simulator.p12
              readOnly: true
          readinessProbe:
            periodSeconds: 2
            httpGet:
              scheme: HTTPS
              port: 8443
              path: /actuator/health
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 2
            httpGet:
              scheme: HTTPS
              port: 8443
              path: /actuator/health
      volumes:
        - name: cert-volume
          hostPath:
            path: /Users/nkvaratskhelia/universe-simulator/universe-simulator.p12
  selector:
    matchLabels:
      app: universe-simulator
      service: universe-simulator-gateway-app
  replicas: 1
