deployment/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: universe-simulator-gateway-app-service
  namespace: universe-simulator
  labels:
    app: universe-simulator
    service: universe-simulator-gateway-app
spec:
  ports:
    - port: 8443
  selector:
    app: universe-simulator
    service: universe-simulator-gateway-app
